name:                same-same
version:             0.1.2
synopsis:            Ignore the differences between a and Identity a.
description:
    This plugin provides nominal(!) proofs that @a ~ Identity a@, allowing
    for a more idiomatic approach to higher kinded data.

homepage:            https://github.com/isovector/same-same
license:             MIT
license-file:        LICENSE
author:              Sandy Maguire
maintainer:          sandy@sandymaguire.me
copyright:           2018 Sandy Maguire
category:            Constraints
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC ==8.0.1, GHC ==8.0.2, GHC ==8.2.2

library
  exposed-modules:     Data.Functor.Identity.Plugin
  build-depends:       base >=4.9 && <5
  build-depends:       ghc >=8.0.1
  default-language:    Haskell2010

Test-Suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-Source-Dirs:   test
  main-is:          Main.hs
  build-depends:    base >=4.9 && <5, same-same

source-repository head
  type:     git
  location: git://github.com/isovector/same-same.git
